[package]
name = "vpixsh"
version = "0.1.0"
edition = "2021"

# Fixes compile errors: https://github.com/lalrpop/lalrpop/issues/616
resolver = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
