[package]
name = "vpixsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
nix = "0.23"  # For errno support, try matching rustyline's nix requirement
nom_locate = "4"
rustyline = "9.1"

[dev-dependencies]
tempfile = "3"
